  syntax = "proto3";

import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/descriptor.proto";
import "google/api/http.proto";
import "google/api/annotations.proto";
import "google/rpc/status.proto";
import "github.com/rancher/opni/pkg/apis/core/v1/core.proto";
  
  rpc CreateAlertEvent(AlertEvent) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/management/alerts/events"
      body: "*"
    }; 
  }

  // id is the unix epoch timestamp of the alert 
  rpc GetAlertEvent(core.Reference) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get: "/management/alerts/events/{id}"
    };
  }

  rpc ListAlertEvents(ListAlertEventRequest) returns (AlertEventList) {
    option (google.api.http) = {
      get: "/management/alerts/events"
    };
  }

  rpc UpdateAlertEvent(UpdateAlertEventRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/management/alerts/events/{id}"
      body: "*"
    };
  }

  rpc DeleteAlertEvent(core.Reference) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/management/alerts/events/{id}"
    };
  }
}

message AlertEvent {
  uint64 timestamp = 1; // unix epoch timestamp
  repeated string labels = 2;
  google.protobuf.Struct metadata  = 3;
}

message AlertEventList {
  repeated AlertEvent alertEvents = 1;
}

message ListAlertEventRequest {
  repeated string labels = 1;
  uint64 limit  = 2;
  uint64 startTimestamp  = 3;
  uint64 endTimestamp = 4;
}

message UpdateAlertEventRequest {
  string id = 1;
  AlertEvent UpdateAlert = 2;
}